force-app/main/default/objects/Environment__c/Environment__c.object-meta.xml
<CustomObject>
    <description>Salesforce environment within an org - Prod, Dev, or UAT. http://focusonforce.com/platform/salesforce-instances-vs-orgs-vs-environments/</description>
    <label>Environment</label>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>