force-app/main/default/objects/Environment__c/fields/Custom_Domain__c.field-meta.xml
<CustomField>
    <fullName>Custom_Domain__c</fullName>
    <description>This URL data type field stores the location of the custom domain where the org has a custom domain defined (ex: https://domain.my.salesforce.com) using the My Domain Salesforce feature (https://help.salesforce.com/HTViewHelpDoc?id=domain_name_overview.htm). This is part of the SAML configuration.</description>
    <inlineHelpText>If MyDomain is configured, what is the custom domain?</inlineHelpText>
    <label>Custom Domain</label>
    <type>Url</type>
</CustomField>