force-app/main/default/objects/Environment__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instance</label>
    <referenceTo>Instance__c</referenceTo>
    <relationshipLabel>Environments</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>