force-app/main/default/objects/Environment__c/fields/Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Last_Refreshed__c</fullName>
    <inlineHelpText>If sandbox type, when was the sandbox last refreshed?</inlineHelpText>
    <label>Last Refreshed</label>
    <type>Date</type>
</CustomField>