force-app/main/default/objects/Environment__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <inlineHelpText>Located on the Company Information page in the Setup menu, this is the 15 character unique identifier for the environment.</inlineHelpText>
    <label>Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>