force-app/main/default/objects/Environment__c/fields/SAML_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SAML_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is SAML enabled and deployed to users?</inlineHelpText>
    <label>SAML Enabled</label>
    <type>Checkbox</type>
</CustomField>