force-app/main/default/objects/Environment__c/fields/SAML_Login_Enforced__c.field-meta.xml
<CustomField>
    <fullName>SAML_Login_Enforced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if logging in via login.salesforce.com (or test.salesforce.com for a sandbox) is disabled</inlineHelpText>
    <label>SAML Login Enforced</label>
    <type>Checkbox</type>
</CustomField>