force-app/main/default/objects/Environment__c/fields/Sandbox_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Purpose__c</fullName>
    <label>Sandbox Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Integration Testing</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>User Acceptance Testing</fullName>
            </value>
            <value>
                <fullName>Deployment Staging</fullName>
            </value>
            <value>
                <fullName>Error Reproduction</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>