force-app/main/default/objects/Environment__c/fields/Sandbox_Type__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Type__c</fullName>
    <label>Sandbox Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Developer Pro</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>