force-app/main/default/objects/Environment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Org_Id__c</columns>
    <columns>Custom_Domain__c</columns>
    <columns>SAML_Enabled__c</columns>
    <columns>SAML_Login_Enforced__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>